fixed a bunch of stuff ad added other configs

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,7 +8,7 @@
 # Then reload kitty for the config to take affect.
 # Alternatively copy paste below directly into kitty.conf
 
-font_family	ComicCode Nerd Font
+font_family	Comic Code
 italic_font      auto
 bold_font        auto
 bold_italic_font auto
