--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -44,6 +44,7 @@ focus-exclude = []
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 opacity-rule = [
 	"100:name *= 'YouTube'",
+    "100:name *= ' - Live Stream - FIFA World Cup 2022 | SBS On Demand - Brave'",
 	"100:name *= 'Netflix'",
 	"100:name *= 'Disney+'",
 	"100:name *= 'The Owl Club'",
