--- a/.config/i3/config
+++ b/.config/i3/config
@@ -18,11 +18,14 @@ exec --no-startup-id dex --autostart --environment i3
 exec --no-startup-id xss-lock --transfer-sleep-lock -- sh ~/Downloads/util/dotfiles/i3lock/lock.sh
 bindsym Home exec sh ~/Downloads/util/dotfiles/i3lock/lock.sh
 
+# Set default pipewire sink
+exec --no-startup-id pactl set-default-sink alsa_output.usb-Razer_Razer_Nari_Ultimate-00.analog-game
+
 # Set media keys
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10%
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10%
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle
+bindsym XF86AudioRaiseVolume exec --no-startup-id wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+bindsym XF86AudioLowerVolume exec --no-startup-id wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindsym XF86AudioMute exec --no-startup-id wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle && wpctl set-mute 95 toggle
+bindsym XF86AudioMicMute exec --no-startup-id wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindsym XF86AudioPlay exec playerctl play-pause
 bindsym XF86AudioPause exec playerctl play-pause
 bindsym XF86AudioNext exec playerctl next
@@ -139,10 +142,10 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 # Set escrotum screenshot keybinds
-bindsym Shift+Print exec escrotum -C
-bindsym Control+Shift+Print exec escrotum -s -C
-bindsym Control+Print exec escrotum -s ~/Downloads/Screenshots/%Y-%m-%d-%H%M%S_$wx$h_Screenshot.png
-bindsym Print exec escrotum ~/Downloads/Screenshots/%Y-%m-%d-%H%M%S_$wx$h_Screenshot.png
+bindsym Shift+Print exec maim --hidecursor | xclip -selection clipboard -t image/png
+bindsym Control+Shift+Print exec maim -s --hidecursor | xclip -selection clipboard -t image/png
+bindsym Control+Print exec maim -s --hidecursor ~/Downloads/Screenshots/$(date +%Y-%m-%d__%H-%M-%S)_Screenshot.png
+bindsym Print exec maim --hidecursor ~/Downloads/Screenshots/$(date +%Y-%m-%d__%H-%M-%S)_Screenshot.png
 
 # Hide window borders
 for_window [class=".*"] border pixel 0
