Updates to nvim and sway config

--- a/.config/keyd/app.conf
+++ b/.config/keyd/app.conf
@@ -9,7 +9,7 @@ kanox = macro(esc 1ms : 1ms x 1ms a 1ms enter)
 kanoa = macro(esc 1ms S-a)
 
 [firefox]
-kanot = C-t
+kanot = S-A-c
 kanow = C-w
 kanor = C-S-t
 kanoh = C-S-tab
