--- a/.config/sway/config
+++ b/.config/sway/config
@@ -20,67 +20,6 @@ set $term kitty
 # TODO: look into wayland native alternatives
 set $menu rofi -show run
 
-# Swaylock
-set $lock swaylock \
-	--screenshots \
-	--clock \
-	--grace 5 \
-    --grace-no-mouse \
-    --font ComicCode \
-    --indicator-idle-visible \
-    --indicator \
-	--effect-blur 5x2 \
-	--indicator-radius 200 \
-	--indicator-thickness 16 \
-    --show-failed-attempts \
-    --ignore-empty-password \
-    --no-unlock-indicator \
-    --line-uses-ring \
-    \
-	--ring-color bd93f9 \
-    --text-color bd93f9 \
-    --inside-color 22242d \
-    \
-    --ring-ver-color 50fa7b \
-    --text-ver-color 50fa7b \
-    --inside-ver-color 22242d \
-    \
-    --ring-wrong-color ff5555 \
-    --text-wrong-color ff5555 \
-    --inside-wrong-color 22242d \
-    \
-    --ring-clear-color 8be9fd \
-    --text-clear-color 8be9fd \
-    --inside-clear-color 22242d \
-    \
-    --ring-caps-lock-color ffb86c \
-    --text-caps-lock-color ffb86c \
-    --inside-caps-lock-color 22242d
-
-# _arguments -s \
-# 	'(--bs-hl-color)'--bs-hl-color'[Sets the color of backspace highlight segments]:color:' \
-# 	'(--caps-lock-bs-hl-color)'--caps-lock-bs-hl-color'[Sets the color of backspace highlight segments when Caps Lock is active]:color:' \
-# 	'(--caps-lock-key-hl-color)'--caps-lock-key-hl-color'[Sets the color of the key press highlight segments when Caps Lock is active]:color:' \
-# 	'(--color -c)'{--color,-c}'[Turn the screen into the given color instead of white]:color:' \
-# 	'(--config -C)'{--config,-C}'[Path to the config file]:filename:_files' \
-# 	'(--daemonize -f)'{--daemonize,-f}'[Detach from the controlling terminal after locking]' \
-# 	'(--debug -d)'{--debug,-d}'[Enable debugging output]' \
-# 	'(--disable-caps-lock-text -L)'{--disable-caps-lock-text,-L}'[Disable the Caps Lock text]' \
-# 	'(--help -h)'{--help,-h}'[Show help message and quit]' \
-# 	'(--hide-keyboard-layout -K)'{--hide-keyboard-layout,-K}'[Hide the current xkb layout while typing]' \
-# 	'(--ignore-empty-password -e)'{--ignore-empty-password,-e}'[When an empty password is provided, do not validate it]' \
-# 	'(--indicator-radius)'--indicator-radius'[Sets the indicator radius]:radius:' \
-# 	'(--indicator-thickness)'--indicator-thickness'[Sets the indicator thickness]:thickness:' \
-# 	'(--indicator-x-position)'--indicator-x-position'[Sets the horizontal position of the indicator]' \
-# 	'(--indicator-y-position)'--indicator-y-position'[Sets the vertical position of the indicator]' \
-# 	'(--key-hl-color)'--key-hl-color'[Sets the color of the key press highlight segments]:color:' \
-# 	'(--layout-bg-color)'--layout-bg-color'[Sets the background color of the box containing the layout text]:color:' \
-# 	'(--layout-border-color)'--layout-border-color'[Sets the color of the border of the box containing the layout text]:color:' \
-# 	'(--layout-text-color)'--layout-text-color'[Sets the color of the layout text]:color:' \
-#
-# 	'(--separator-color)'--separator-color'[Sets the color of the lines that separate highlight segments]:color:' \
-# 	'(--text-clear-color)'--text-clear-color'[Sets the color of the text when cleared]:color:' \
-
 # Set wallpaper
 output * bg /home/akari/Downloads/util/dotfiles/Wallpapers/current/* fill
 
@@ -99,14 +38,14 @@ bar swaybar_command waybar
 exec --no-startup-id pactl set-default-sink alsa_output.usb-Razer_Razer_Nari_Ultimate-00.analog-game
 
 # Idle configuration
-exec swayidle -w \
-    timeout 300 $lock \
-    timeout 600 'swaymsg "output * power off"' \
-    resume 'swaymsg "output * power on"' \
-    before-sleep $lock
+# exec swayidle -w \
+#     timeout 300 /home/akari/Downloads/util/dotfiles/.config/sway/lock.sh \
+#     timeout 600 'swaymsg "output * power off"' \
+#     resume 'swaymsg "output * power on"' \
+#     before-sleep /home/akari/Downloads/util/dotfiles/.config/sway/lock.sh
 
 # Lock hotkey
-bindsym Home exec $lock
+bindsym Home exec /home/akari/Downloads/util/dotfiles/.config/sway/lock.sh
 
 # Start a terminal
 bindsym $mod+Return exec $term
