--- a/greetd/config.toml
+++ b/greetd/config.toml
@@ -8,7 +8,7 @@ vt = 1
 
 # `agreety` is the bundled agetty/login-lookalike. You can replace `/bin/sh`
 # with whatever you want started, such as `sway`.
-command = "tuigreet --remember --user-menu --time --asterisks --cmd startx"
+command = "tuigreet --remember --user-menu --time --asterisks --cmd /home/akari/Downloads/util/dotfiles/greetd/launch_sway.sh"
 
 # The user to run the command as. The privileges this user must have depends
 # on the greeter. A graphical greeter may for example require the user to be
