--- a/.config/sway/config
+++ b/.config/sway/config
@@ -123,7 +123,7 @@ bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
-workspace $ws10 output $secondary_monitor
+# workspace $ws10 output $secondary_monitor
 workspace $ws9 output $secondary_monitor
 
 #
