--- a/.config/sway/config
+++ b/.config/sway/config
@@ -64,13 +64,19 @@ floating_modifier $mod normal
 bindsym $mod+Shift+c reload
 
 # Set media keys
-bindsym XF86AudioRaiseVolume exec --no-startup-id wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-bindsym XF86AudioLowerVolume exec --no-startup-id wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindsym XF86AudioMute exec --no-startup-id wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindsym XF86AudioRaiseVolume exec --no-startup-id wpctl set-volume $(wpctl status | rg "Sinks" --after-context 3 -m 1 | rg "Family" | cut -c 11-12) 5%+
+bindsym XF86AudioLowerVolume exec --no-startup-id wpctl set-volume $(wpctl status | rg "Sinks" --after-context 3 -m 1 | rg "Family" | cut -c 11-12) 5%-
+bindsym XF86AudioMute exec --no-startup-id wpctl set-mute $(wpctl status | rg "Sinks" --after-context 3 -m 1 | rg "Family" | cut -c 11-12) toggle && wpctl set-mute $(wpctl status | rg "Sinks" --after-context 3 -m 1 | rg "Nari Ultimate Game" | cut -c 11-12) toggle
 bindsym XF86AudioPlay exec playerctl play-pause
 bindsym XF86AudioPause exec playerctl play-pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
+
+# Set screenshot shrotcuts (mac like)
+bindsym Shift+Print exec grim - | wl-copy
+bindsym Shift+Control+Print exec grim -g "$(slurp)" - | wl-copy
+bindsym Print exec grim "$(date +"/home/akari/Downloads/util/Screenshots/Screenshot %Y-%m-%d %T.png")"
+bindsym Control+Print exec grim -g "$(slurp)" "$(date +"/home/akari/Downloads/util/Screenshots/Screenshot %Y-%m-%d %T.png")"
 
 # Exit sway
 bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
@@ -185,7 +191,7 @@ default_border none
 gaps inner 12
 
 # Numlock on be default
-exec_always --no-startup-id numlockx on
+input * xkb_numlock enabled
 
 # Start notifications with dunst
 exec_always --no-startup-id dunst ~/.config/dunst/dunstrc
