--- a/.cargo/.crates.toml
+++ b/.cargo/.crates.toml
@@ -23,14 +23,19 @@
     "rust-size",
     "rust-strip",
 ]
+"cargo-generate 0.20.0 (registry+https://github.com/rust-lang/crates.io-index)" = ["cargo-generate"]
 "code-minimap 0.6.4 (registry+https://github.com/rust-lang/crates.io-index)" = ["code-minimap"]
 "coreutils 0.0.14 (registry+https://github.com/rust-lang/crates.io-index)" = ["coreutils"]
+"create-tauri-app 4.0.3 (registry+https://github.com/rust-lang/crates.io-index)" = ["cargo-create-tauri-app"]
+"diesel_cli 2.1.1 (registry+https://github.com/rust-lang/crates.io-index)" = ["diesel"]
 "licensor 2.1.0 (registry+https://github.com/rust-lang/crates.io-index)" = ["licensor"]
 "lolcat 1.4.1 (registry+https://github.com/rust-lang/crates.io-index)" = ["lolcat"]
 "onehistory 0.3.0 (registry+https://github.com/rust-lang/crates.io-index)" = ["onehistory"]
 "ravedude 0.1.5 (registry+https://github.com/rust-lang/crates.io-index)" = ["ravedude"]
 "ripgrep 13.0.0 (registry+https://github.com/rust-lang/crates.io-index)" = ["rg"]
 "svdtools 0.2.8 (registry+https://github.com/rust-lang/crates.io-index)" = ["svdtools"]
-"trunk 0.16.0 (registry+https://github.com/rust-lang/crates.io-index)" = ["trunk"]
+"tauri-cli 2.0.0-beta.22 (registry+https://github.com/rust-lang/crates.io-index)" = ["cargo-tauri"]
+"trunk 0.18.8 (registry+https://github.com/rust-lang/crates.io-index)" = ["trunk"]
 "uwuify 0.2.2 (registry+https://github.com/rust-lang/crates.io-index)" = ["uwuify"]
 "wthrr 0.1.3 (registry+https://github.com/rust-lang/crates.io-index)" = ["wthrr"]
+"zoxide 0.9.4 (registry+https://github.com/rust-lang/crates.io-index)" = ["zoxide"]
