fix wm, rebase onto laptop

--- a/.config/polybar/forest/config.ini
+++ b/.config/polybar/forest/config.ini
@@ -257,6 +257,7 @@ cursor-scroll =
 ; $ polybar -m | cut -d ':' -f 1
 ; $ xrandr -q | grep " connected" | cut -d ' ' -f1
 monitor = DVI-D-0
+# monitor = DVI-D-1
 
 ; Use the specified monitor as a fallback if the main one is not found.
 monitor-fallback =
@@ -359,8 +360,9 @@ font-2 = "feather:size=12;3"
 ;   modules-right = ipc clock
 
 modules-left = workspaces sep cpu memory filesystem
-modules-center = spotify sep date
-modules-right = network sep pulseaudio sep powermenu
+# modules-center = spotify sep date
+# modules-right = network sep pulseaudio sep powermenu
+modules-right = spotify sep date
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
