--- a/.config/i3/config
+++ b/.config/i3/config
@@ -22,9 +22,9 @@ exec --no-startup-id dex --autostart --environment i3
 exec --no-startup-id pactl set-default-sink alsa_output.usb-Razer_Razer_Nari_Ultimate-00.analog-game
 
 # Set media keys
-bindsym XF86AudioRaiseVolume exec --no-startup-id wpctl set-volume $(wpctl status | rg "Sinks" --after-context 3 -m 1 | rg "Family" | cut -c 11-12) 5%+
-bindsym XF86AudioLowerVolume exec --no-startup-id wpctl set-volume $(wpctl status | rg "Sinks" --after-context 3 -m 1 | rg "Family" | cut -c 11-12) 5%-
-bindsym XF86AudioMute exec --no-startup-id wpctl set-mute $(wpctl status | rg "Sinks" --after-context 3 -m 1 | rg "Family" | cut -c 11-12) toggle && wpctl set-mute $(wpctl status | rg "Sinks" --after-context 3 -m 1 | rg "Nari Ultimate Game" | cut -c 11-12) toggle
+bindsym XF86AudioRaiseVolume exec --no-startup-id /home/akari/Downlaods/util/dotfiles/.config/sway/volume.sh up
+bindsym XF86AudioLowerVolume exec --no-startup-id /home/akari/Downlaods/util/dotfiles/.config/sway/volume.sh down
+bindsym XF86AudioMute exec --no-startup-id /home/akari/Downlaods/util/dotfiles/.config/sway/volume.sh mute
 bindsym XF86AudioMicMute exec --no-startup-id wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindsym XF86AudioPlay exec playerctl play-pause
 bindsym XF86AudioPause exec playerctl play-pause
