--- a/.config/sway/config
+++ b/.config/sway/config
@@ -28,8 +28,9 @@ set $primary_monitor DP-2
 set $secondary_monitor DVI-D-1
 
 # Set monitor positions
-output $primary_monitor pos 0 0
-output $secondary_monitor pos 1920 30
+# swaymsg -t get_outputs
+output $primary_monitor pos 0 0 adaptive_sync on
+output $secondary_monitor pos 1920 60 adaptive_sync on
 
 # Toolbar
 bar swaybar_command waybar
@@ -64,9 +65,9 @@ floating_modifier $mod normal
 bindsym $mod+Shift+c reload
 
 # Set media keys
-bindsym XF86AudioRaiseVolume exec --no-startup-id wpctl set-volume $(wpctl status | rg "Sinks" --after-context 3 -m 1 | rg "Family" | cut -c 11-12) 5%+
-bindsym XF86AudioLowerVolume exec --no-startup-id wpctl set-volume $(wpctl status | rg "Sinks" --after-context 3 -m 1 | rg "Family" | cut -c 11-12) 5%-
-bindsym XF86AudioMute exec --no-startup-id wpctl set-mute $(wpctl status | rg "Sinks" --after-context 3 -m 1 | rg "Family" | cut -c 11-12) toggle && wpctl set-mute $(wpctl status | rg "Sinks" --after-context 3 -m 1 | rg "Nari Ultimate Game" | cut -c 11-12) toggle
+bindsym XF86AudioRaiseVolume exec --no-startup-id /home/akari/Downloads/util/dotfiles/.config/sway/volume.sh up
+bindsym XF86AudioLowerVolume exec --no-startup-id /home/akari/Downloads/util/dotfiles/.config/sway/volume.sh down
+bindsym XF86AudioMute exec --no-startup-id /home/akari/Downloads/util/dotfiles/.config/sway/volume.sh mute
 bindsym XF86AudioPlay exec playerctl play-pause
 bindsym XF86AudioPause exec playerctl play-pause
 bindsym XF86AudioNext exec playerctl next
@@ -130,7 +131,7 @@ bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
 # workspace $ws10 output $secondary_monitor
-workspace $ws9 output $secondary_monitor
+# workspace $ws9 output $secondary_monitor
 
 #
 # Layout stuff:
