--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -15,60 +15,90 @@ bold_italic_font auto
 
 font_size	14.0
 
-foreground            #f8f8f2
-background            #282a36
-selection_foreground  #ffffff
-selection_background  #44475a
 
-font_color	#f8f8f2
-
-url_color #8be9fd
-
-# black
-color0  #21222c
-color8  #6272a4
-
-# red
-color1  #ff5555
-color9  #ff6e6e
-
-# green
-color2  #50fa7b
-color10 #69ff94
-
-# yellow
-color3  #f1fa8c
-color11 #ffffa5
-
-# blue
-color4  #bd93f9
-color12 #d6acff
-
-# magenta
-color5  #ff79c6
-color13 #ff92df
-
-# cyan
-color6  #8be9fd
-color14 #a4ffff
-
-# white
-color7  #f8f8f2
+background #f8f8f8
+foreground #2a2b33
+cursor #bbbbbb
+selection_background #ececec
+color0 #000000
+color8 #000000
+color1 #de3d35
+color9 #de3d35
+color2 #3e953a
+color10 #3e953a
+color3 #d2b67b
+color11 #d2b67b
+color4 #2f5af3
+color12 #2f5af3
+color5 #950095
+color13 #a00095
+color6 #3e953a
+color14 #3e953a
+color7 #bbbbbb
 color15 #ffffff
+selection_foreground #f8f8f8
 
-# Cursor colors
-cursor            #f8f8f2
-cursor_text_color background
 
-# Tab bar colors
-active_tab_foreground   #282a36
-active_tab_background   #f8f8f2
-inactive_tab_foreground #282a36
-inactive_tab_background #6272a4
 
-# Marks
-mark1_foreground #282a36
-mark1_background #ff5555
+
+
+# foreground            #f8f8f2
+# background            #282a36
+# selection_foreground  #ffffff
+# selection_background  #44475a
+#
+# font_color	#f8f8f2
+#
+# url_color #8be9fd
+#
+# # black
+# color0  #21222c
+# color8  #6272a4
+#
+# # red
+# color1  #ff5555
+# color9  #ff6e6e
+#
+# # green
+# color2  #50fa7b
+# color10 #69ff94
+#
+# # yellow
+# color3  #f1fa8c
+# color11 #ffffa5
+#
+# # blue
+# color4  #bd93f9
+# color12 #d6acff
+#
+# # magenta
+# color5  #ff79c6
+# color13 #ff92df
+#
+# # cyan
+# color6  #8be9fd
+# color14 #a4ffff
+#
+# # white
+# color7  #f8f8f2
+# color15 #ffffff
+#
+# # Cursor colors
+# cursor            #f8f8f2
+# cursor_text_color background
+#
+# # Tab bar colors
+# active_tab_foreground   #282a36
+# active_tab_background   #f8f8f2
+# inactive_tab_foreground #282a36
+# inactive_tab_background #6272a4
+#
+# # Marks
+# mark1_foreground #282a36
+# mark1_background #ff5555
+
+
+
 
 window_padding_width 0
 
