--- a/.cargo/.crates.toml
+++ b/.cargo/.crates.toml
@@ -1,7 +1,7 @@
 [v1]
-"alacritty 0.11.0 (registry+https://github.com/rust-lang/crates.io-index)" = ["alacritty"]
-"bacon 2.2.1 (registry+https://github.com/rust-lang/crates.io-index)" = ["bacon"]
-"bottom 0.6.8 (registry+https://github.com/rust-lang/crates.io-index)" = ["btm"]
+"alacritty 0.15.0 (registry+https://github.com/rust-lang/crates.io-index)" = ["alacritty"]
+"bacon 3.10.0 (registry+https://github.com/rust-lang/crates.io-index)" = ["bacon"]
+"bottom 0.10.2 (registry+https://github.com/rust-lang/crates.io-index)" = ["btm"]
 "cargo-binutils 0.3.6 (registry+https://github.com/rust-lang/crates.io-index)" = [
     "cargo-cov",
     "cargo-nm",
@@ -23,19 +23,23 @@
     "rust-size",
     "rust-strip",
 ]
-"cargo-generate 0.20.0 (registry+https://github.com/rust-lang/crates.io-index)" = ["cargo-generate"]
-"code-minimap 0.6.4 (registry+https://github.com/rust-lang/crates.io-index)" = ["code-minimap"]
-"coreutils 0.0.14 (registry+https://github.com/rust-lang/crates.io-index)" = ["coreutils"]
-"create-tauri-app 4.0.3 (registry+https://github.com/rust-lang/crates.io-index)" = ["cargo-create-tauri-app"]
-"diesel_cli 2.1.1 (registry+https://github.com/rust-lang/crates.io-index)" = ["diesel"]
+"cargo-generate 0.22.1 (registry+https://github.com/rust-lang/crates.io-index)" = ["cargo-generate"]
+"cargo-update 16.1.0 (registry+https://github.com/rust-lang/crates.io-index)" = [
+    "cargo-install-update",
+    "cargo-install-update-config",
+]
+"code-minimap 0.6.8 (registry+https://github.com/rust-lang/crates.io-index)" = ["code-minimap"]
+"coreutils 0.0.29 (registry+https://github.com/rust-lang/crates.io-index)" = ["coreutils"]
+"create-tauri-app 4.5.9 (registry+https://github.com/rust-lang/crates.io-index)" = ["cargo-create-tauri-app"]
+"diesel_cli 2.2.7 (registry+https://github.com/rust-lang/crates.io-index)" = ["diesel"]
 "licensor 2.1.0 (registry+https://github.com/rust-lang/crates.io-index)" = ["licensor"]
-"lolcat 1.4.1 (registry+https://github.com/rust-lang/crates.io-index)" = ["lolcat"]
-"onehistory 0.3.0 (registry+https://github.com/rust-lang/crates.io-index)" = ["onehistory"]
-"ravedude 0.1.5 (registry+https://github.com/rust-lang/crates.io-index)" = ["ravedude"]
-"ripgrep 13.0.0 (registry+https://github.com/rust-lang/crates.io-index)" = ["rg"]
-"svdtools 0.2.8 (registry+https://github.com/rust-lang/crates.io-index)" = ["svdtools"]
-"tauri-cli 2.0.0-beta.22 (registry+https://github.com/rust-lang/crates.io-index)" = ["cargo-tauri"]
-"trunk 0.18.8 (registry+https://github.com/rust-lang/crates.io-index)" = ["trunk"]
+"lolcat 1.5.0 (registry+https://github.com/rust-lang/crates.io-index)" = ["lolcat"]
+"onehistory 0.3.4 (registry+https://github.com/rust-lang/crates.io-index)" = ["onehistory"]
+"ravedude 0.1.8 (registry+https://github.com/rust-lang/crates.io-index)" = ["ravedude"]
+"ripgrep 14.1.1 (registry+https://github.com/rust-lang/crates.io-index)" = ["rg"]
+"svdtools 0.4.4 (registry+https://github.com/rust-lang/crates.io-index)" = ["svdtools"]
+"tauri-cli 2.2.7 (registry+https://github.com/rust-lang/crates.io-index)" = ["cargo-tauri"]
+"trunk 0.21.7 (registry+https://github.com/rust-lang/crates.io-index)" = ["trunk"]
 "uwuify 0.2.2 (registry+https://github.com/rust-lang/crates.io-index)" = ["uwuify"]
-"wthrr 0.1.3 (registry+https://github.com/rust-lang/crates.io-index)" = ["wthrr"]
-"zoxide 0.9.4 (registry+https://github.com/rust-lang/crates.io-index)" = ["zoxide"]
+"wthrr 1.2.1 (registry+https://github.com/rust-lang/crates.io-index)" = ["wthrr"]
+"zoxide 0.9.6 (registry+https://github.com/rust-lang/crates.io-index)" = ["zoxide"]
