--- a/.config/i3/config
+++ b/.config/i3/config
@@ -25,7 +25,7 @@ exec --no-startup-id pactl set-default-sink alsa_output.usb-Razer_Razer_Nari_Ult
 bindsym XF86AudioRaiseVolume exec --no-startup-id /home/akari/Downlaods/util/dotfiles/.config/sway/volume.sh up
 bindsym XF86AudioLowerVolume exec --no-startup-id /home/akari/Downlaods/util/dotfiles/.config/sway/volume.sh down
 bindsym XF86AudioMute exec --no-startup-id /home/akari/Downlaods/util/dotfiles/.config/sway/volume.sh mute
-bindsym XF86AudioMicMute exec --no-startup-id wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+# bindsym XF86AudioMicMute exec --no-startup-id wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindsym XF86AudioPlay exec playerctl play-pause
 bindsym XF86AudioPause exec playerctl play-pause
 bindsym XF86AudioNext exec playerctl next
